infra/istio/route.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-route
spec:
  selector:
    istio: ingressgateway
  servers:               
  - port:
      number: 80
      name: http
      protocol: HTTP  
    hosts:
    - '*'  
  - port:
      number: 443  
      name: https
      protocol: HTTPS
    hosts:
    - '*.'
    tls:
      mode: SIMPLE
      credentialName: ingress-cert # this should match with Certificate secretName
      # privateKey: sds
      # serverCertificate: sds
